@@ -1,3 +1,8 @@
+2004-07-15  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/gstreamer-support.[ch]: Fix to take a GstPad* when
+	setting chain/link/get functions, add debug handlers.
+
 2004-07-07  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/gstreamer-spec.scm (<gstreamer-wrapset>): Fix
